# FL-TEE

proto/: secure_aggregation.proto
secure_aggregation/app/: Cargo.toml
secure_aggregation/app/src/: ecalls.rs  ocalls.rs  server.rs
src/: federated_main.py  options.py  proto_client.py
