[package]
# 项目的基本信息，如名称、版本、作者等
name = "app"
version = "1.0.0"
authors = ["FumiyukiKato"]
links = "encryption"  # 与 crate 名称相关联的链接库名
build = "build.rs"   # 构建脚本的路径
edition = '2018'     # Rust 代码的版本

[[bin]]
# 指定二进制可执行程序的信息
name = "secure-aggregation-server"  # 可执行程序的名称
path = "src/server.rs"              # 可执行程序的入口文件路径

[[bin]]
# 另一个可执行程序的信息
name = "bench"
path = "src/benchmark.rs"

[dependencies]
# 项目依赖的外部库
sgx_types = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
hex = { version = "0.4" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prettytable-rs = "^0.10.0"
rand = "0.8.4"
chrono = "0.4.6"
tonic = "0.11.0"
prost = "0.12.3"

[build-dependencies]
# 构建时依赖的库
tonic-build = "0.11.0"
cc = "1.0"

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
# 补丁，指定本地路径替换外部依赖
sgx_types = { path = "../incubator-teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../incubator-teaclave-sgx-sdk/sgx_urts" }

[profile.release]
# 发布配置，指定优化级别等
opt-level = 3

[features]
# 特性，用于配置条件编译时的功能选项，默认为空
default = []
